test: cookie setting change